@@ -1,4 +1,4 @@
-/* $Id: tmux.h,v 1.310 2009-05-02 08:34:39 nicm Exp $ */
+/* $Id: tmux.h,v 1.311 2009-05-04 13:20:02 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -1082,6 +1082,7 @@ void	options_set_number(struct options *, const char *, long long);
 long long options_get_number(struct options *, const char *);
 
 /* tty.c */
+u_char		 tty_get_acs(struct tty *, u_char);
 void		 tty_emulate_repeat(struct tty *,
     		     enum tty_code_code, enum tty_code_code, u_int);
 void		 tty_reset(struct tty *);
